--- a/PromptGenerator/PromptGenerator.csproj
+++ b/PromptGenerator/PromptGenerator.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <!-- アプリ名 -->
-    <AssemblyName>WinUIExample</AssemblyName>
+    <AssemblyName>PromptGenerator</AssemblyName>
     
     <!-- アプリの説明 -->
     <Description>This app is an example of a small WinUI app.</Description>
@@ -23,7 +23,7 @@
     <ApplicationIcon>Assets/App.ico</ApplicationIcon>
 
     <!-- リポジトリの場所 -->
-    <RepositoryUrl>https://github.com/himeyama/WinUIExample</RepositoryUrl>
+    <RepositoryUrl>https://github.com/himeyama/PromptGenerator</RepositoryUrl>
     <PackageProjectUrl>$(RepositoryUrl)</PackageProjectUrl>
 
     <!-- LICENSE & README.md の場所 -->
@@ -45,5 +45,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250513003" />
+    <PackageReference Include="ModelContextProtocol" Version="0.4.1-preview.1" />
   </ItemGroup>
 </Project>
